Added foodActivity and foodInfoActivity. Also created the layout for foodInfoActivity.

--- a/Vitaminfo2/app/src/main/AndroidManifest.xml
+++ b/Vitaminfo2/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".foodActivity"
+            android:label="@string/title_activity_food"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".foodInfoActivity"
+            android:label="@string/title_activity_food_info"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
