--- a/Vitaminfo2/app/src/main/AndroidManifest.xml
+++ b/Vitaminfo2/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:label="@string/title_activity_food"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".foodInfoActivity"
+            android:name=".FoodInfoActivity"
             android:label="@string/title_activity_food_info"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
