Added the Foods and RecyclerView for foods that contain vitamins functionality to the project

--- a/Vitaminfo2/app/src/main/AndroidManifest.xml
+++ b/Vitaminfo2/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <activity
             android:name=".userinfo"
             android:label="@string/title_activity_userinfo"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".FoodActivity"
+            android:label="@string/title_activity_food"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
